build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/Regression/GitHub/2591-separate-class-preserve.phpt.warn
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	(
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'OK'
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'tests'
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'assertions'
WARNING:21:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
